# public/openApiU8191038.yaml
@@ -36,7 +36,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/GamedevStudios"
+                $ref: "#/components/schemas/GamedevStudio"
         "400":
           description: Bad request
           content:
@@ -50,7 +50,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /gamedev-studios/{gamedev_studios_id}:
+  /gamedev-studios/{gamedev_studio_id}:
     get:
       tags:
         - gamedev studios
@@ -63,7 +63,7 @@ paths:
           description: The id of the gamedev studio
           schema:
             type: integer
-            example: 100
+            example: 1
         - name: include
           in: query
           required: false
@@ -86,7 +86,7 @@ paths:
                     properties:
                       id:
                         type: integer
-                        example: 10
+                        example: 1
                       title:
                         type: string
                       address:
@@ -136,7 +136,7 @@ paths:
           description: The id of the gamedev_studio
           schema:
             type: integer
-            example: 100
+            example: 1
       requestBody:
         description: Fields to update
         content:
@@ -147,7 +147,6 @@ paths:
                 - title
                 - address
                 - website
-                - number_employees
               properties:
                 title:
                   type: string
@@ -195,7 +194,7 @@ paths:
           description: The id of the gamedev_studio
           schema:
             type: integer
-            example: 100
+            example: 1
       requestBody:
         description: Fields to update
         content:
@@ -206,7 +205,6 @@ paths:
                 - title
                 - address
                 - website
-                - number_employees
               properties:
                 title:
                   type: string
@@ -254,7 +252,7 @@ paths:
           description: The id of the gamedev_studio
           schema:
             type: integer
-            example: 100
+            example: 1
       responses:
         "200":
           description: Success
