# routes/api.php
@@ -21,10 +21,10 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::post('/gamedev-studios', [ GamedevStudiosController::class, 'create']);
 
-Route::patch('/gamedev-studios/{gamedev_studios_id}', [GamedevStudiosController::class, 'patch']);
+Route::patch('/gamedev-studios/{id}', [GamedevStudiosController::class, 'patch']);
 
-Route::put('/gamedev-studios/{gamedev_studios_id}', [GamedevStudiosController::class, 'update']);
+Route::put('/gamedev-studios/{id}', [GamedevStudiosController::class, 'update']);
 
-Route::delete('/gamedev-studios/{gamedev_studios_id}', [GamedevStudiosController::class, 'delete']);
+Route::delete('/gamedev-studios/{id}', [GamedevStudiosController::class, 'delete']);
 
-Route::get('/gamedev-studios/{gamedev_studios_id}', [GamedevStudiosController::class, 'get']);
+Route::get('/gamedev-studios/{id}', [GamedevStudiosController::class, 'get']);
